# toguzcpp

./: .gitignore  CMakeLists.txt  README.md  iterative_deepening_timings.txt  main.cpp  main.py  search_depth_timings.txt  try.cpp
bindings/: toguz_bindings.cpp
pyencoder/: autoencoder.py  dataloader.py  train.py
pyencoder/tests/: test_transform_data.py
src/: clean_dataset.cpp  generater.cpp  iterative_deepening_benchmark.cpp  qlearning.cpp  qlearning_selfplay_experiment.cpp  search.cpp  search.h  search_depth_benchmark.cpp  toguznative.cpp  toguznative.h
test/: iterative_deepening_test.cpp  toguznative_test.cpp  tt_test.cpp
